[build-system]
requires = ["setuptools>=58.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
py_version=310
known_third_party = ["PIL", "diffusers", "numpy", "torch"]

[mypy]
python_version = "3.10"
ignore_missing_imports = true
plugins = ["mypy_pytest.plugin"]

[project]
name = "magicmix"
version = "0.1.0"
description = "Unofficial huggingface/diffusers-based implementation of the paper MagicMix: Semantic Mixing with Diffusion Models"
authors = [
    {name = "Nipun Jindal", email = "jindal.nipun@com"},
]